# Gpufit

./: .gitignore  CMakeLists.txt
Cpufit/: interface.cpp
Gpufit/: constants.h
Gpufit/models/: models.cuh  pulse_erf_decay.cuh  pulse_gauss_decay.cuh  sin_plus_line.cuh
Interfaces/: BGFitInterface.cpp  BGFitInterface.hpp  CMakeLists.txt  FitThreadPool.cpp  FitThreadPool.hpp  GaussFitInterface.cpp  GaussFitInterface.hpp  PoolFitInterface.cpp  PoolFitInterface.hpp  PulseFitInterface.cpp  PulseFitInterface.hpp
examples/: CMakeLists.txt  Gpufit_Cpufit_Performance_Comparison_Pulse.cpp
